<resources>
    <string name="app_name">HawkTool</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="undo">Undo</string>
    <string name="onefiledelete">1 File Delete</string>
    <string name="filesdeletes">Files Deletes</string>
    <string name="searchbyname">Search by</string>
    <string name="selected">Selected</string>
    <string name="orderby">Order by</string>
    <string name="action_settings">Settings</string>
    <string name="storage">Storage</string>
    <string name="internal">Internal</string>
    <string name="external">External</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="rename">Rename</string>
    <string name="zip">Zip</string>
    <string name="root">Root:</string>
    <string name="enablerootaccess">Enabled Root Access</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="Copyright">Copyright © 2017–2018</string>
    <string name="buscar">Search</string>
    <string name="move">Move</string>
    <string name="send">Send</string>
    <string name="action_sort">Sort</string>
    <string name="Compress">Compress</string>
    <string name="ajustes_title_general">General</string>
    <string name="ajustes_extension">Hide extension</string>
    <string name="ajustes_date_modified">Show Last Modified</string>
    <string name="ajustes_size_file">Show file sizes</string>
    <string name="ajustes_title_apariencia">Appearance</string>
    <string name="ajustes_theme_dark">Use theme dark</string>
    <string name="temp_title">Title</string>
    <string name="temp_date">12/MAR/2018</string>
    <string name="temp_size">12mb</string>
    <string name="unpack_repack">Enabled module unpack repack img</string>
    <string name="dialog_unpack_storage">Select storage where the tool will be placed</string>
    <string name="dialog_unpack_cancel">Cancel</string>
    <string name="dialog_unpack_ok">OK</string>
    <string name="Error_root">Error root</string>
    <string name="error_root_acces">Can\'t get root access or denied by user</string>
    <string name="Error_busy">Error busybox</string>
    <string name="Error_busy_not_install">Can´t get busybox access, Is it installed?. Try installing it.</string>
    <string name="error_create_directory">Error in create directory</string>
    <string name="error_copy_file">Error in copy files</string>
    <string name="error_copy_bash">Error in copy bash file in /system/xbin</string>
    <string name="menu_tool_instructions">Instructions</string>
    <string name="menu_tool_unpack">Unpack</string>
    <string name="menu_tool_repack">Repack</string>
    <string name="error_not_file_name">Error not exist</string>
    <string name="error_direct_exist">Error direct exist</string>
    <string name="error_empty_string">Error not string result</string>
    <string name="Error_no_permissions_or_space">Error not permissions for files or insufficient space.</string>
    <string name="error_copy_file_helper">Error copy %s</string>
    <string name="title_custom">Additional features</string>
    <string name="custom_wallpaper">Wallpapers</string>
    <string name="custom_device_info">Device</string>
    <string name="custom_device_copy">Copy</string>
    <string name="custom_device_share">Share</string>
    <string name="custom_device_copy_all">All copy</string>
    <string name="custom_device_share_all">All share</string>
    <string name="custom_wall_more">More…</string>
    <string name="custom_wall_download">Download</string>
    <string name="custom_wall_set">Set as Wallpaper</string>
</resources>
