<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_rename"
        android:icon="@drawable/ic_rename"
        android:title="@string/rename"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/buscar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_copy"
        android:title="@string/copy"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_move"
        android:icon="@drawable/ic_move"
        android:title="@string/cut"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_compress"
        android:icon="@drawable/ic_compress"
        android:title="@string/Compress"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_send"
        android:icon="@drawable/ic_send"
        android:title="@string/send"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom" />

</menu>