<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/storage">
            <menu>
        <item
            android:id="@+id/internal"
            android:icon="@drawable/ic_internal"
            android:title="@string/internal" />
        <item
            android:id="@+id/external"
            android:icon="@drawable/ic_sd_storage"
            android:title="@string/external" />
            </menu>
        </item>
    </group>

    <item android:title="@string/contact">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_info"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
