<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="16dp">
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/device_title"
            android:layout_alignParentTop="true"
            android:text="@string/temp_title"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/device_description"
            android:text="@string/temp_size"
            android:layout_below="@+id/device_title"/>

        <FrameLayout
            android:id="@+id/space_dev"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/device_description"
            android:background="@color/md_divider"
            />


        <TextView
            android:id="@+id/device_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/device_description"
            android:layout_alignStart="@+id/device_description"
            android:layout_below="@id/space_dev"
            android:text="@string/custom_device_share"
            android:textColor="?attr/colorAccent"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/device_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/device_share"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:text="@string/custom_device_copy"
            android:textColor="?attr/colorAccent"
            android:textSize="14sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>