<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:background="@drawable/selectable_background">

    <ImageView
        android:src="@drawable/ic_folder"
        android:id="@+id/folder_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/list_item_icon_margin"
        android:scaleType="center"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/list_item_name_marginStart"
        android:layout_marginEnd="@dimen/list_item_name_marginEnd"
        android:orientation="vertical" >

        <TextView
            android:text="@string/temp_title"
            android:id="@+id/name_file"
            style="@style/Text.Subhead"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/temp_date"
                android:layout_weight="1"
                android:layout_width="0dp"
                style="@style/Text.Body1"
                android:id="@+id/metaData"
                />

            <TextView
                android:layout_marginStart="20dp"
                android:text="@string/temp_size"
                android:id="@+id/sizeFile"
                style="@style/Text.Body1" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
