<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorwhite"
    android:orientation="vertical"
    android:weightSum="1"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textViewThemeDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/dialog_unpack_storage"
        android:layout_marginBottom="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/md_text" />

    <FrameLayout
        android:background="@color/md_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>


    <RelativeLayout
            android:id="@+id/relativeLayoutCardViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <GridLayout
                android:layout_centerHorizontal="true"
                android:id="@+id/gridLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="1">

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view1"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    android:stateListAnimator="@anim/raise"
                    card_view:cardBackgroundColor="@color/md_red_400"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp"
                    android:touchscreenBlocksFocus="false">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="80dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/external"
                        android:textSize="14sp"
                        android:textColor="@color/md_text_white" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="24dp"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    android:stateListAnimator="@anim/raise"
                    card_view:cardBackgroundColor="@color/md_blue_400"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="80dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/internal"
                        android:textColor="@color/md_text_white" />
                </android.support.v7.widget.CardView>

            </GridLayout>

        </RelativeLayout>


    <FrameLayout
        android:background="@color/md_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="right"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDisagree"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:background="@drawable/dialog_button"
            android:clickable="true"
            android:text="@string/dialog_unpack_cancel"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="?attr/colorAccent" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent" />
w
        <Button
            android:id="@+id/buttonAgree"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:background="@drawable/dialog_button"
            android:clickable="true"
            android:paddingRight="16dp"
            android:text="@string/dialog_unpack_ok"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="?attr/colorAccent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        android:id="@+id/progressLinear">
        <ProgressBar
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size" />
        <TextView
            android:id="@+id/textProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />
</LinearLayout>